# causaldefense

./: EXPERIMENTAL_RESULTS_SUMMARY.md  causaldefend.aux  causaldefend.out  causaldefend.tex
causaldefend/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENTRENAMIENTO_COMPLETADO.md  GUIA_PRUEBAS.md  GUIA_RAPIDA.md  INSTALL_GUIDE.md  LICENSE  QUICKSTART.md  README.md  RESUMEN_IMPLEMENTACION.md  TRAINING_GUIDE.md  docker-compose.yml  fix_numpy.py  inspect_checkpoint.py  pyproject.toml  quick_start.py  requirements-minimal.txt  requirements-optimized.txt  requirements.txt  setup.py
causaldefend/config/: api_config.yaml  train_config.yaml
causaldefend/docker/: Dockerfile.api  Dockerfile.worker
causaldefend/docs/: ARCHITECTURE.md  DATASETS_GUIDE.md  DATASETS_STATUS.md  DEPLOYMENT.md  INSTALL_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  TRAINING_GUIDE.md
causaldefend/docs/datasets/: DATASETS_SETUP_SUMMARY.md  DATASETS_STATUS.md  EXTERNAL_DATASETS.md  INDEX_DATASETS.md  QUICKSTART_DATASETS.md  REFERENCES.md
causaldefend/docs/status/: ENTRENAMIENTO_COMPLETADO.md  NEXT_STEPS.md
causaldefend/docs/summary/: PROJECT_SUMMARY_ES.md
causaldefend/examples/: basic_usage.py  compare_apt_detection.py  complete_detection.py  complete_detection_simple.py  dashboard.py  demo_basico.py  simple_detection_demo.py  test_detector_advanced.py
causaldefend/legacy/: setup.py.backup
causaldefend/scripts/: README.md  download_streamspot.py  fix_numpy.py  import_external_dataset.py  import_local_dataset.py  prepare_dataset.py  prepare_dataset_simple.py  quick_start.py  run_demo_safe.py  split_dataset.py  test_detector_shapes.py  train_all.py  train_ci_tester.py  train_ci_tester_quick.py  train_detector.py  train_detector_quick.py  verify_installation.py
causaldefend/src/: __init__.py
causaldefend/src/api/: __init__.py  main.py
causaldefend/src/causal/: __init__.py  causal_discovery.py
causaldefend/src/causaldefend/causal/: graph_reduction.py  neural_ci_test.py
causaldefend/src/causaldefend/compliance/: eu_ai_act.py
causaldefend/src/causaldefend/explanations/: __init__.py  causal_explainer.py
causaldefend/src/causaldefend/pipeline/: __init__.py  detection_pipeline.py
causaldefend/src/causaldefend/uncertainty/: __init__.py  conformal_prediction.py
causaldefend/src/compliance/: __init__.py
causaldefend/src/pipeline/: detection_pipeline.py
experiments/: comprehensive_experiments.py  generate_plots.py  quick_experiments.py  run_experiments.py
experiments/results/: experimental_results.json
